<resources>
    <string name="app_name">android nang cao</string>
    <string name="input_email">Nhập email</string>
    <string name="input_Name">Nhập Tên</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="input_repassword">Nhập lại mật khẩu</string>
    <string name="authentic">Xác thực</string>
    <string name="title_activity_main_logged_admin">MainActivityLoggedAdmin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="quantity">Số lượng:</string>
    <string name="feedback">Phản hồi</string>
    <string name="processing_order">Đang xử lý</string>
    <string name="done_order">Hoàn thành</string>
    <string name="account">Tài khoản</string>
    <string name="resume">Thông tin cá nhân</string>
    <string name="revenue_statistics">Thống kê thu nhập</string>
    <string name="contact">Liên hệ</string>
    <string name="price">Giá</string>
    <string name="discount">Khuyến mãi</string>
    <string name="url_img">Link ảnh</string>
    <string name="url_img_banner">Link ảnh banner</string>
    <string name="product">Sản phẩm</string>
    <string name="add_product">Thêm sản phẩm</string>
    <string name="name_product">Tên sản phẩm</string>
    <string name="order">Đơn hàng</string>
    <string name="description">Mô tả</string>
    <string name="add">Thêm</string>
    <string name="edit">Sửa</string>
    <string name="edit_product">Sửa sản phẩm</string>
    <string name="name_store">Tên cửa hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="address_email">Địa chỉ email</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="invalid">không hợp lệ</string>
    <string name="edit_title_format">Chỉnh sửa %1$s</string>
    <string name="cancel">Hủy</string>
    <string name="save">Lưu</string>
    <string name="address_title">Chỉnh sửa Địa chỉ</string>
    <string name="address_province">Tỉnh/Thành phố</string>
    <string name="address_district">Quận/Huyện</string>
    <string name="address_ward">Xã/Phường</string>
    <string name="address_street">Số nhà/Làng xóm</string>
    <string name="address_invalid">Địa chỉ không hợp lệ</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="error_empty_username">Tên người dùng không được để trống</string>
    <string name="error_invalid_username">Tên người dùng không hợp lệ: chỉ chứa chữ cái, số, dấu gạch dưới (_), dấu chấm (.), và dấu gạch ngang (-)</string>
    <string name="error_empty_password">Mật khẩu không được để trống</string>
    <string name="error_invalid_password">Mật khẩu không hợp lệ: ít nhất 8 ký tự, bao gồm ít nhất một chữ hoa, một chữ thường, và một số</string>
    <string name="error_password_not_match">Mật khẩu không khớp</string>
    <string name="error_invalid_email">Email không hợp lệ</string>
    <string name="error_empty_repassword">Nhập mật khẩu</string>
    <string name="today_is_suggestion">Gợi ý hôm nay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>